--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-#main-bio,
-#contact-info,
+#main-bio {
+  width: 70%;
+}
+
+#contact-info {
+  width: 30%;
+}
+
 #bio-image {
-  float: left;
+  width: 200px;
+  height: 200px;
+  margin-right: 20px;
 }
